--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -2,7 +2,7 @@ user   www-data www-data;
 
 http {
   server {
-    listen 0.0.0.0:9100;
+    listen 0.0.0.0:{{ node_exporter_port }};
     location / {
       proxy_pass http://localhost:9101/;
 
