--- a/meta/main.yml
+++ b/meta/main.yml
@@ -44,5 +44,4 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
   #       Maximum 20 tags per role.
 
-dependencies:
-  - insight_w3f.polkadot_health_check
+dependencies: []
