--- a/tasks/install-node-exporter.yml
+++ b/tasks/install-node-exporter.yml
@@ -38,9 +38,11 @@
   when: not htpasswd_file.stat.exists
 
 - name: create nginx config
-  copy:
-    src: nginx.conf
+  template:
+    src: nginx.conf.j2
     dest: /etc/nginx/nginx.conf
+    owner: root
+    group: root
     mode: 0600
 
 - name: start nginx service
